--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <div class="payment-grid">
                 <!-- FPS -->
                 <div class="payment-card">
-                    <h3>Faster Payments Service (FPS)<span class="coming-soon-badge">Coming Soon</span></h3>
+                    <h3>Faster Payments Service (FPS)<span class="available-badge">Available</span></h3>
                     <p>
                         Real-time payment system enabling near-instant transfers between UK bank accounts, typically processing within seconds. Widely used for online and mobile banking transfers, standing orders, and bill payments.
                     </p>
