Update index.html for chaps

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 
                 <!-- CHAPS -->
                 <div class="payment-card">
-                    <h3>CHAPS<span class="coming-soon-badge">Coming Soon</span></h3>
+                    <h3>CHAPS<span class="available-badge">Available</span></h3>
                     <p>
                         Clearing House Automated Payment System provides same-day, guaranteed high-value payments. Essential for time-critical transactions such as property purchases, large business payments, and financial market settlements.
                     </p>
