--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <a href="#uk-payments" class="nav-link">UK Payments</a>
                     <ul class="dropdown">
                         <li class="dropdown-item">
-                            <a href="fps-payment-process.html" class="dropdown-link coming-soon">FPS (Faster Payments)</a>
+                            <a href="fps-payment-process.html" >FPS (Faster Payments)</a>
                         </li>
                         <li class="dropdown-item">
                             <a href="bacs-payment-process.html" class="dropdown-link available">BACS</a>
@@ -542,7 +542,7 @@
                 <div class="payment-grid">
                     <!-- FPS -->
                     <div class="payment-card">
-                        <h3>Faster Payments Service (FPS)<span class="coming-soon-badge">Coming Soon</span></h3>
+                        <h3>Faster Payments Service (FPS)</h3>
                         <p>
                             Real-time payment system enabling near-instant transfers between UK bank accounts, typically processing within seconds. Widely used for online and mobile banking transfers, standing orders, and bill payments.
                         </p>
