--- a/index.html
+++ b/index.html
@@ -469,10 +469,10 @@
                             <a href="fps-payment-process.html" >FPS (Faster Payments)</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="bacs-payment-process.html" class="dropdown-link available">BACS</a>
+                            <a href="bacs-payment-process.html" >BACS</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="chaps-payment-process.html" class="dropdown-link available">CHAPS</a>
+                            <a href="chaps-payment-process.html" >CHAPS</a>
                         </li>
                     </ul>
                 </li>
@@ -480,7 +480,7 @@
                     <a href="#eu-payments" class="nav-link">EU Payments</a>
                     <ul class="dropdown">
                         <li class="dropdown-item">
-                            <a href="sepa-instant-payment-process.html" class="dropdown-link available">SEPA Instant</a>
+                            <a href="sepa-instant-payment-process.html" >SEPA Instant</a>
                         </li>
                         <li class="dropdown-item">
                             <a href="sepa-payment-process.html" class="dropdown-link coming-soon">SEPA</a>
@@ -551,7 +551,7 @@
 
                     <!-- BACS -->
                     <div class="payment-card">
-                        <h3>BACS<span class="available-badge">Available</span></h3>
+                        <h3>BACS</h3>
                         <p>
                             Bankers' Automated Clearing Services handles bulk payment processing with a 3-day clearing cycle. The preferred system for salary payments, Direct Debits, supplier payments, and recurring transactions across the UK.
                         </p>
@@ -560,7 +560,7 @@
 
                     <!-- CHAPS -->
                     <div class="payment-card">
-                        <h3>CHAPS<span class="available-badge">Available</span></h3>
+                        <h3>CHAPS</h3>
                         <p>
                             Clearing House Automated Payment System provides same-day, guaranteed high-value payments. Essential for time-critical transactions such as property purchases, large business payments, and financial market settlements.
                         </p>
@@ -581,7 +581,7 @@
                 <div class="payment-grid">
                     <!-- SEPA Instant -->
                     <div class="payment-card">
-                        <h3>SEPA Instant<span class="available-badge">Available</span></h3>
+                        <h3>SEPA Instant</h3>
                         <p>
                             Real-time euro payment scheme enabling instant credit transfers available 24/7/365 across the SEPA region, with funds credited to the beneficiary's account within 10 seconds. Includes comprehensive CSM infrastructure details.
                         </p>
