menu only kep 'Available'

--- a/index.html
+++ b/index.html
@@ -466,13 +466,13 @@
                     <a href="#uk-payments" class="nav-link">UK Payments</a>
                     <ul class="dropdown">
                         <li class="dropdown-item">
-                            <a href="fps-payment-process.html" >FPS (Faster Payments)</a>
+                            <a href="fps-payment-process.html" class="dropdown-link available">FPS</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="bacs-payment-process.html" >BACS</a>
+                            <a href="bacs-payment-process.html" class="dropdown-link available" >BACS</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="chaps-payment-process.html" >CHAPS</a>
+                            <a href="chaps-payment-process.html" class="dropdown-link available">CHAPS</a>
                         </li>
                     </ul>
                 </li>
