SEPA inst - available added

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                     <a href="#eu-payments" class="nav-link">EU Payments</a>
                     <ul class="dropdown">
                         <li class="dropdown-item">
-                            <a href="sepa-instant-payment-process.html" >SEPA Instant</a>
+                            <a href="sepa-instant-payment-process.html" class="dropdown-link available" >SEPA Instant</a>
                         </li>
                         <li class="dropdown-item">
                             <a href="sepa-payment-process.html" class="dropdown-link coming-soon">SEPA</a>
