Update bacs-payment-process.html - standard18 added

--- a/bacs-payment-process.html
+++ b/bacs-payment-process.html
@@ -342,6 +342,7 @@
                 <li><a href="#operations">Day-to-Day Operations</a></li>
                 <li><a href="#security">Security & Compliance</a></li>
                 <li><a href="#file-formats">Common File Formats</a></li>
+                <li><a href="#standard18">Overview of Standard 18 Format</a></li>
                 <li><a href="#advantages">Advantages & Limitations</a></li>
                 <li><a href="#ddi">DDI (Direct Debit Instruction)</a></li>
                 <li><a href="#addacs">ADDACS (Amendment and Cancellation Service)</a></li>
@@ -612,6 +613,14 @@ CONTRA: D01999999999999999999999999992000050000000000000000000000000</div>
             </div>
         </section>
 
+         <!-- Stndard 18 Formats -->
+        <section id="standard18">
+            <h2>Overview of Standard 18 Format</h2>
+            <p class="intro-text">
+                Complete overview of the Standard 18 message format, field level details, examples can be accessed from here.
+            </p>
+            <a href="bacs_standard18_format.html" class="payment-link">Learn More</a>
+        </section>
         <!-- Advantages & Limitations -->
         <section id="advantages">
             <h2>Advantages & Limitations</h2>
