--- a/bacs-payment-process.html
+++ b/bacs-payment-process.html
@@ -268,6 +268,17 @@
             border-radius: 8px;
         }
 
+        .payment-link {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: #2563eb;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 1.05rem;
+            transition: all 0.3s ease;
+            padding: 0.5rem 0;
+        }
         /* Code blocks */
         .code-block {
             background: #1f2937;
