Update index.html 0 ISO20022 and removed fixed header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             padding: 0 2rem;
         }
 
-        /* Fixed Banner with your banner.jpg image */
+        /* Fixed Banner with your banner.jpg image
         .fixed-banner {
             position: fixed;
             top: 0;
@@ -47,7 +47,7 @@
             width: 100%;
             height: 200px; /* You can adjust this height based on your banner.jpg */
             z-index: 1000;
-        }
+        } */
 
         .banner-background {
             position: absolute;
@@ -58,7 +58,7 @@
             background: linear-gradient(rgba(26, 54, 93, 0.85), rgba(44, 82, 130, 0.85)), url('banner.jpg');
             background-size: cover;
             background-position: center;
-            background-attachment: fixed; /* This makes it stay fixed while scrolling */
+           /* background-attachment: fixed;  This makes it stay fixed while scrolling */
             background-repeat: no-repeat;
         }
 
@@ -500,7 +500,7 @@
                             <a href="card-payments-overview.html" class="dropdown-link coming-soon">Card Payments</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="iso20022-standard.html" class="dropdown-link coming-soon">ISO 20022</a>
+                            <a href="iso20022-standard.html" class="dropdown-link available">ISO 20022</a>
                         </li>
                         <li class="dropdown-item">
                             <a href="iso8583-standard.html" class="dropdown-link coming-soon">ISO 8583</a>
@@ -638,7 +638,7 @@
 
                     <!-- ISO 20022 -->
                     <div class="payment-card">
-                        <h3>ISO 20022<span class="coming-soon-badge">Coming Soon</span></h3>
+                        <h3>ISO 20022</h3>
                         <p>
                             International standard for financial messaging that provides rich, structured data format for payment instructions, enabling enhanced payment information and improved straight-through processing.
                         </p>
