--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             padding: 0 2rem;
         }
 
-        /* Fixed Banner with your banner.jpg image
+        /* Fixed Banner with your banner.jpg image*/
         .fixed-banner {
-            position: fixed;
+           /* position: fixed;*/
             top: 0;
             left: 0;
             width: 100%;
             height: 200px; /* You can adjust this height based on your banner.jpg */
             z-index: 1000;
-        } */
+        } 
 
         .banner-background {
             position: absolute;
