--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 200px; /* You can adjust this height based on your banner.jpg */
+            height: 50px; /* You can adjust this height based on your banner.jpg */
             z-index: 1000;
         } 
 
@@ -457,9 +457,10 @@
             </div>
         </div>
     </header>
-    
+
+	
     <!-- Navigation Menu -->
-    <nav>
+   /* <nav>
         <div class="nav-container">
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -513,7 +514,7 @@
             </ul>
         </div>
     </nav>
-
+*/
     <main>
         <!-- Introduction Section -->
         <section class="intro-section">
