--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
 	
     <!-- Navigation Menu -->
-   /* <nav>
+   <!-- <nav>
         <div class="nav-container">
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -514,7 +514,7 @@
             </ul>
         </div>
     </nav>
-*/
+ -->
     <main>
         <!-- Introduction Section -->
         <section class="intro-section">
