--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Payments Overview - UK & EU Payment Systems</title>
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cstyle%3Ecircle%7Bfill:%231a365d%7D text%7Bfill:white;font-family:Arial,sans-serif;font-size:50px;font-weight:bold%7D%3C/style%3E%3Ccircle cx='50' cy='50' r='48'/%3E%3Ctext x='50' y='70' text-anchor='middle'%3E💷%3C/text%3E%3C/svg%3E">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Crimson+Pro:wght@400;600&display=swap" rel="stylesheet">
-    <style>
+       <style>
         :root {
             --primary-color: #1a365d;
             --secondary-color: #2d3748;
@@ -39,15 +39,15 @@
             padding: 0 2rem;
         }
 
-        /* Fixed Banner with your banner.jpg image*/
+        /* Fixed Banner with your banner.jpg image */
         .fixed-banner {
-           /* position: fixed;*/
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            height: 50px; /* You can adjust this height based on your banner.jpg */
+            height: 200px; /* You can adjust this height based on your banner.jpg */
             z-index: 1000;
-        } 
+        }
 
         .banner-background {
             position: absolute;
@@ -58,7 +58,7 @@
             background: linear-gradient(rgba(26, 54, 93, 0.85), rgba(44, 82, 130, 0.85)), url('banner.jpg');
             background-size: cover;
             background-position: center;
-           /* background-attachment: fixed;  This makes it stay fixed while scrolling */
+            background-attachment: fixed; /* This makes it stay fixed while scrolling */
             background-repeat: no-repeat;
         }
 
@@ -457,7 +457,6 @@
             </div>
         </div>
     </header>
-
 	
     <!-- Navigation Menu -->
    <!-- <nav>
