--- a/index.html
+++ b/index.html
@@ -627,15 +627,7 @@
                 </div>
 
                 <div class="payment-grid">
-                    <!-- Card Payments -->
-                    <div class="payment-card">
-                        <h3>Card Payments<span class="coming-soon-badge">Coming Soon</span></h3>
-                        <p>
-                            European card payment infrastructure including schemes like Visa, Mastercard, and local systems, covering both card-present and card-not-present transactions across the EU with EMV and PSD2 compliance.
-                        </p>
-                        <a href="card-payments-overview.html" class="payment-link">Learn More</a>
-                    </div>
-
+                  
                     <!-- ISO 20022 -->
                     <div class="payment-card">
                         <h3>ISO 20022</h3>
@@ -653,6 +645,15 @@
                         </p>
                         <a href="iso8583-standard.html" class="payment-link">Learn More</a>
                     </div>
+					  <!-- Card Payments -->
+                    <div class="payment-card">
+                        <h3>Card Payments<span class="coming-soon-badge">Coming Soon</span></h3>
+                        <p>
+                            European card payment infrastructure including schemes like Visa, Mastercard, and local systems, covering both card-present and card-not-present transactions across the EU with EMV and PSD2 compliance.
+                        </p>
+                        <a href="card-payments-overview.html" class="payment-link">Learn More</a>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -662,7 +663,7 @@
             <div class="container">
                 <h2>About Me</h2>
                 <div class="section-intro">
-                    This comprehensive payment systems resource is designed to provide clear, detailed information about UK and European payment infrastructure. Each guide includes process flows, message formats, operational details, and best practices to help professionals understand and work with these critical financial systems.
+                    I created this comprehensive payment systems resource designed to provide clear, detailed information about UK and European payment infrastructure. Each guide includes process flows, message formats, operational details, and best practices to help professionals understand and work with these critical financial systems. Best to view this in desktop.
 <p>
 <a href="aboutme.html" class="payment-link">About me</a>
 </p>
