Update bacs-payment-process.html - tranlation to Iso20022 added

--- a/bacs-payment-process.html
+++ b/bacs-payment-process.html
@@ -358,6 +358,7 @@
                 <li><a href="#ddi">DDI (Direct Debit Instruction)</a></li>
                 <li><a href="#addacs">ADDACS (Amendment and Cancellation Service)</a></li>
                 <li><a href="#arudd">ARUDD (Return of Unpaid Direct Debits)</a></li>
+                <li><a href="#iso20022-migration">Migration to ISO20022</a></li>
                 <li><a href="#best-practices">Best Practices</a></li>
                 <li><a href="#direct-participant">Direct Participant Process Flow</a></li>
                 <li><a href="#indirect-participant">Indirect Participant Process Flow</a></li>
@@ -1733,7 +1734,15 @@ CANCELLATION (Code 2):
                 </ul>
             </div>
         </section>
-
+    <!-- iso20022-migration -->
+        <section id="iso20022-migration">
+            <h2>Migration to ISO20022</h2>
+            <p class="intro-text">
+                Complete overview of the Standard 18 translation to ISO20022 along with key messages, field level formatting, enrichments with examples can be accessed from here.
+            </p>
+            <a href="bacs-iso20022-translation.html" class="payment-link">Learn More</a>
+        </section>
+        
         <!-- Best Practices -->
         <section id="best-practices">
             <h2>Best Practices for Businesses</h2>
