--- a/index.html
+++ b/index.html
@@ -647,11 +647,11 @@
                     </div>
 					  <!-- Card Payments -->
                     <div class="payment-card">
-                        <h3>Card Payments<span class="coming-soon-badge">Coming Soon</span></h3>
+                        <h3>Card Payments</h3>
                         <p>
                             European card payment infrastructure including schemes like Visa, Mastercard, and local systems, covering both card-present and card-not-present transactions across the EU with EMV and PSD2 compliance.
                         </p>
-                        <a href="card-payments-overview.html" class="payment-link">Learn More</a>
+                        <a href="card_payment_processs.html" class="payment-link">Learn More</a>
                     </div>
 
                 </div>
