Update index.html - minor correction in card payment link

--- a/index.html
+++ b/index.html
@@ -637,6 +637,14 @@
                         <a href="iso20022-standard.html" class="payment-link">Learn More</a>
                     </div>
 
+					  <!-- Card Payments -->
+                    <div class="payment-card">
+                        <h3>Card Payments</h3>
+                        <p>
+                            European card payment infrastructure including schemes like Visa, Mastercard, and local systems, covering both card-present and card-not-present transactions across the EU with EMV and PSD2 compliance.
+                        </p>
+                        <a href="card_payment_process.html" class="payment-link">Learn More</a>
+                    </div>
                     <!-- ISO 8583 -->
                     <div class="payment-card">
                         <h3>ISO 8583<span class="coming-soon-badge">Coming Soon</span></h3>
@@ -645,15 +653,6 @@
                         </p>
                         <a href="iso8583-standard.html" class="payment-link">Learn More</a>
                     </div>
-					  <!-- Card Payments -->
-                    <div class="payment-card">
-                        <h3>Card Payments</h3>
-                        <p>
-                            European card payment infrastructure including schemes like Visa, Mastercard, and local systems, covering both card-present and card-not-present transactions across the EU with EMV and PSD2 compliance.
-                        </p>
-                        <a href="card_payment_processs.html" class="payment-link">Learn More</a>
-                    </div>
-
                 </div>
             </div>
         </section>
